# conan-hwloc

./: .travis.yml  FindHwloc.cmake  README.md  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  main.c
